sql/ha_partition.cc
@@ -4045,7 +4045,7 @@ int ha_partition::handle_unordered_next(uchar *buf, bool is_next_same)
   }
   else if (!(error= file->index_next(buf)))
   {
-    if (!(file->ha_table_flags() & HA_READ_ORDER) ||
+    if (!(file->index_flags(active_index, 0, 1) & HA_READ_ORDER) ||
         compare_key(end_range) <= 0)
     {
       m_last_part= m_part_spec.start_part;
@@ -4123,7 +4123,7 @@ int ha_partition::handle_unordered_scan_next_partition(uchar * buf)
     }
     if (!error)
     {
-      if (!(file->ha_table_flags() & HA_READ_ORDER) ||
+      if (!(file->index_flags(active_index, 0, 1) & HA_READ_ORDER) ||
           compare_key(end_range) <= 0)
       {
         m_last_part= i;
